bigpurple_scripts/train_rot2_9452963.err
/gpfs/home/bz957/.bash_profile: line 27: /gpfs/data/luilab/BRATS/fsl/etc/fslconf/fsl.sh: No such file or directory
Traceback (most recent call last):
  File "train.py", line 16, in <module>
    from utils.dataset import BasicDataset
  File "/gpfs/scratch/bz957/Motion_Correction/Pytorch-UNet-master/utils/dataset.py", line 58
    input_imgs = glob(imgs_dir/*/*/*nii.gz)
                               ^
SyntaxError: invalid syntax
